--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-beautiful-dnd": "11.0.3",
         "react-big-calendar": "0.21.0",
         "react-chartjs-2": "2.7.6",
+        "react-content-loader": "^4.3.2",
         "react-dom": "16.8.6",
         "react-draggable": "3.3.0",
         "react-frame-component": "4.1.0",
