--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "react-beautiful-dnd": "11.0.3",
         "react-big-calendar": "0.21.0",
         "react-chartjs-2": "2.7.6",
-        "react-content-loader": "^4.3.2",
+        "react-content-loader": "^4.3.4",
         "react-dom": "16.8.6",
         "react-draggable": "3.3.0",
         "react-frame-component": "4.1.0",
@@ -54,8 +54,10 @@
         "react-swipeable-views": "0.13.1",
         "react-table": "6.10.0",
         "react-text-mask": "5.4.3",
+        "react-to-pdf": "0.0.8",
         "react-virtualized": "9.21.1",
         "react-window": "1.8.2",
+        "react-youtube": "^7.9.0",
         "redux": "4.0.1",
         "redux-thunk": "2.3.0",
         "typeface-muli": "0.0.71",
