--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "react-router-dom": "5.0.0",
         "react-scripts": "3.0.1",
         "react-select": "2.4.4",
+        "react-slick": "^0.25.2",
         "react-swipeable-views": "0.13.1",
         "react-table": "6.10.0",
         "react-text-mask": "5.4.3",
@@ -60,6 +61,7 @@
         "react-youtube": "^7.9.0",
         "redux": "4.0.1",
         "redux-thunk": "2.3.0",
+        "slick-carousel": "^1.8.1",
         "typeface-muli": "0.0.71",
         "velocity-react": "1.4.3"
     },
