--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "3.0.0",
     "private": true,
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^16.0.0",
+        "@ckeditor/ckeditor5-react": "^2.1.0",
         "@date-io/date-fns": "1.3.6",
         "@material-ui/core": "4.0.1",
         "@material-ui/icons": "4.0.1",
@@ -43,6 +45,9 @@
         "react-dom": "16.8.6",
         "react-draggable": "3.3.0",
         "react-frame-component": "4.1.0",
+        "react-highlight-words": "^0.16.0",
+        "react-html-parser": "^2.0.2",
+        "react-mailchimp-subscribe": "^2.1.0",
         "react-masonry-css": "1.0.12",
         "react-number-format": "4.0.8",
         "react-popper": "1.0.2",
