--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "@date-io/date-fns": "1.3.6",
         "@material-ui/core": "4.0.1",
         "@material-ui/icons": "4.0.1",
-        "@material-ui/lab": "^4.0.0-alpha.56",
         "@material-ui/pickers": "3.0.0",
         "@material-ui/styles": "4.0.1",
         "auth0-lock": "11.16.0",
@@ -92,7 +91,7 @@
     },
     "scripts": {
         "start": "yarn run tailwind && react-scripts start",
-        "build": "npm run tailwind && node ./purge-tailwindcss.js && cross-env GENERATE_SOURCEMAP=false react-scripts build",
+        "build": "yarn run tailwind && node ./purge-tailwindcss.js && cross-env GENERATE_SOURCEMAP=false react-scripts build",
         "tailwind": "./node_modules/.bin/tailwind build ./src/styles/tailwind.base.css -c ./tailwind.js -o ./src/styles/tailwind.css",
         "test": "react-scripts test --env=node",
         "eject": "react-scripts eject",
