--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "jss-extend": "6.2.0",
         "jwt-decode": "2.2.0",
         "keycode": "2.2.0",
-        "lodash": "^4.17.15",
+        "lodash": "4.17.11",
         "material-table": "1.39.0",
         "material-ui-popup-state": "1.3.2",
         "mobile-detect": "1.4.3",
@@ -84,7 +84,7 @@
         "cross-env": "5.2.0",
         "globby": "9.2.0",
         "js-beautify": "1.10.0",
-        "marked": "^0.7.0",
+        "marked": "0.6.2",
         "purgecss": "1.3.0",
         "tailwindcss": "1.0.2",
         "webpack-bundle-analyzer": "3.3.2"
