--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "react-helmet": "^5.2.1",
         "react-highlight-words": "^0.16.0",
         "react-html-parser": "^2.0.2",
+        "react-image-lightbox": "^5.1.1",
         "react-mailchimp-subscribe": "^2.1.0",
         "react-masonry-css": "1.0.12",
         "react-number-format": "4.0.8",
