--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "react-chartjs-2": "2.7.6",
         "react-content-loader": "^4.3.4",
         "react-cookie-consent": "^5.1.1",
+        "react-copy-to-clipboard": "^5.0.2",
         "react-dom": "16.8.6",
         "react-draggable": "3.3.0",
         "react-frame-component": "4.1.0",
