--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
     "name": "les-achats-industriels",
     "version": "3.0.0",
-    "homepage": "https://7e-sky.github.io/repofrontend",
     "private": true,
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^16.0.0",
@@ -22,8 +21,8 @@
         "formsy-react": "1.1.5",
         "google-map-react": "1.1.4",
         "jsonwebtoken": "8.5.1",
-        "jss": "^9.7.0",
-        "jss-extend": "^6.2.0",
+        "jss": "10.0.0-alpha.16",
+        "jss-extend": "6.2.0",
         "jwt-decode": "2.2.0",
         "keycode": "2.2.0",
         "lodash": "4.17.11",
@@ -94,8 +93,6 @@
         "webpack-bundle-analyzer": "3.3.2"
     },
     "scripts": {
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
         "start": "yarn run tailwind && react-scripts start",
         "build": "yarn run tailwind && node ./purge-tailwindcss.js && cross-env GENERATE_SOURCEMAP=false react-scripts build",
         "tailwind": "./node_modules/.bin/tailwind build ./src/styles/tailwind.base.css -c ./tailwind.js -o ./src/styles/tailwind.css",
